[gd_scene load_steps=22 format=3 uid="uid://bodd8yfelcu1b"]

[ext_resource type="Script" path="res://player.gd" id="1_dnhck"]
[ext_resource type="Texture2D" uid="uid://dr4j717axadwa" path="res://textures/player/fall.png" id="2_eysem"]
[ext_resource type="Texture2D" uid="uid://dnppybrriqog1" path="res://textures/player/idle.png" id="2_nuu4g"]
[ext_resource type="Texture2D" uid="uid://bh6bndsglrust" path="res://textures/player/run.png" id="3_14iyh"]
[ext_resource type="Texture2D" uid="uid://5aelm268rytq" path="res://textures/player/jump.png" id="3_403fm"]
[ext_resource type="AudioStream" uid="uid://bhuc8wra26f43" path="res://sounds/jump.wav" id="6_56onr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbs83"]
size = Vector2(12, 15)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cod7m"]
blend_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_l22rb"]
atlas = ExtResource("2_eysem")
region = Rect2(0, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3vwm"]
atlas = ExtResource("2_eysem")
region = Rect2(17, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj4g2"]
atlas = ExtResource("2_nuu4g")
region = Rect2(0, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwgm2"]
atlas = ExtResource("2_nuu4g")
region = Rect2(17, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tbf2"]
atlas = ExtResource("2_nuu4g")
region = Rect2(34, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkctf"]
atlas = ExtResource("2_nuu4g")
region = Rect2(51, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_si0bb"]
atlas = ExtResource("3_403fm")
region = Rect2(0, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_exg45"]
atlas = ExtResource("3_403fm")
region = Rect2(17, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_53f2i"]
atlas = ExtResource("3_14iyh")
region = Rect2(0, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdhdg"]
atlas = ExtResource("3_14iyh")
region = Rect2(17, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxrd4"]
atlas = ExtResource("3_14iyh")
region = Rect2(34, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_d25re"]
atlas = ExtResource("3_14iyh")
region = Rect2(51, 0, 17, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_mkw5d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l22rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3vwm")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj4g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwgm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tbf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkctf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_si0bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exg45")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53f2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdhdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxrd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d25re")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_dnhck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gbs83")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_cod7m")
position = Vector2(0, -0.499999)
sprite_frames = SubResource("SpriteFrames_mkw5d")
animation = &"fall"

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_56onr")
volume_db = -20.0

[node name="step_time" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="glitch" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="step_time" to="." method="_on_step_time_timeout"]
[connection signal="timeout" from="glitch" to="." method="_on_glitch_timeout"]
